quick fixes from meeting

--- a/less/content.less
+++ b/less/content.less
@@ -327,6 +327,7 @@ img{
         hr {
             border-top: 1px solid #e2e2e2;
             grid-column-end: 6;
+            border-left: transparent;
         }
     }
 }
@@ -502,6 +503,7 @@ img{
         border-bottom: none;
         border-top: 1px solid #c9c9c9;
         margin: 50px 0 30px 0;
+        border-left: transparent;
     }
 }
 
