--- a/less/content.less
+++ b/less/content.less
@@ -805,8 +805,12 @@ img{
             display: grid;
             grid-template-rows: min-content max-content 1fr;
             grid-row-gap: 0px;
+           
             img, .title {
                 margin-bottom: 15px;
+            }
+            .title{
+                padding-right: 0;
             }
         }
     }
