hr/table matching

--- a/less/content.less
+++ b/less/content.less
@@ -328,6 +328,7 @@ img{
             border-top: 1px solid #e2e2e2;
             grid-column-end: 6;
             border-left: transparent;
+            border-bottom: transparent;
         }
     }
 }
@@ -342,7 +343,7 @@ img{
         border: none;
         background: @ltmid-gray;
         height: 1px;
-        margin: 10px;
+        margin: 10px 10px 10px 0;
         align-self: flex-end;
     }
 }
@@ -575,6 +576,8 @@ img{
     }
     hr {
         border-top: 1px solid #e0e0e0;
+        border-bottom: transparent;
+        border-left: transparent;
     }
     .first hr {
         margin-top: 110px;
