--- a/less/grid.less
+++ b/less/grid.less
@@ -62,6 +62,8 @@ header{
 
 hr{
     border-top: 1px solid @hr-gray;
+    border-bottom: transparent;
+    border-left: transparent;
     margin-top: 20px;
     margin-bottom: 20px;
     grid-column-start: 1;
