--- a/less/content.less
+++ b/less/content.less
@@ -393,8 +393,9 @@ img{
             color: @text-gray;
         }
         .desc{
-            font-size: 18px;
+            font-size: 15px;
             font-family: 'SegoeUISemiLight';
+            font-weight: normal;
         }
 
     }
@@ -440,6 +441,7 @@ img{
             line-height: 20px;
             padding-right: 100px;
             margin-bottom: 50px;
+            font-weight: normal;
         }
     }
     .dos, .donts{
