Update 5-7 images to be same height. Remove kerning siteside

--- a/less/content.less
+++ b/less/content.less
@@ -195,7 +195,7 @@ img{
     color: #000000;
     padding: 0 7px 1px 7px;
     text-transform: uppercase;
-    letter-spacing: .075em;
+    letter-spacing: 0;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
@@ -442,6 +442,7 @@ img{
             padding-right: 100px;
             margin-bottom: 50px;
             font-weight: normal;
+            font-family: 'SegoeUI';
         }
     }
     .dos, .donts{
