--- a/less/typography.less
+++ b/less/typography.less
@@ -136,7 +136,7 @@ p {
     font-size: 15px;
     line-height: 20px;
     color: @body-text-black;
-    letter-spacing: .025em;
+    letter-spacing: 0;
     &.title{
         font-size: 20px;
         line-height: 28px;
@@ -185,7 +185,7 @@ p {
     .desc{
         font-size: 20px;
         line-height: 28px;
-        letter-spacing: .025em;
+        letter-spacing: 0;
         font-family: 'SegoeUISemiBold';
         font-weight: 600;
         margin-bottom: 15px;
@@ -284,7 +284,7 @@ a{
         background: @body-text-black;
         text-decoration: none;
         text-align: center;
-        letter-spacing: .075em;
+        letter-spacing: 0;
         white-space: nowrap;
         transition: scale .2s ease-in-out;
         text-transform: uppercase;
