Localize SegoeUI normal fond tnad MDL

--- a/less/typography.less
+++ b/less/typography.less
@@ -1,17 +1,16 @@
 @font-face {
     font-family: "MWF-MDL2";
-    src: url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.woff") format("woff"), url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.ttf") format("truetype"), url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.svg") format("svg")
+    src: url("/assets/fonts/MWFMDL2.woff") format("woff"), url("/assets/fonts/MWFMDL2.ttf") format("truetype"), url("/assets/fonts/MWFMDL2.svg") format("svg")
 }
 
 @font-face {
     font-family: 'SegoeUI';
-    src:url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.eot);
-    src:local("Segoe UI"),local("Segoe"),local("Segoe WP"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.eot#iefix) format("embedded-opentype"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff2) format("woff2"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff) format("woff"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.ttf) format("truetype"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.svg#web) format("svg");
+    src:url(/assets/fonts/SegoeUI/latest.eot);
+    url(/assets/fonts/SegoeUI/latest.eot#iefix) format("embedded-opentype"),
+    url(/assets/fonts/SegoeUI/latest.woff2) format("woff2"),
+    url(/assets/fonts/SegoeUI/latest.woff) format("woff"),
+    url(/assets/fonts/SegoeUI/latest.ttf) format("truetype"),
+    url(/assets/fonts/SegoeUI/latest.svg#web) format("svg");
     font-weight: 400;
 }
 
@@ -37,7 +36,7 @@
 
 @font-face{
     font-family:'SegoeUISemiBold';
-    src:url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.eot);src:local("Segoe UI Semibold"),local("Segoe WP Semibold"),
+    src:url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.eot);src:local("Segoe UI Semibold"),
     url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.eot#iefix) format("embedded-opentype"),
     url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff2) format("woff2"),
     url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff) format("woff"),
@@ -50,7 +49,6 @@
 @font-face {
     font-family: 'SegoeUIBold';
     src:url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.eot);src:local("Segoe UI Bold"),
-    local("Segoe WP Bold"),
     url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.eot#iefix) format("embedded-opentype"),
     url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff2) format("woff2"),
     url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff) format("woff"),
