font folder move

--- a/less/typography.less
+++ b/less/typography.less
@@ -1,16 +1,16 @@
 @font-face {
     font-family: "MWF-MDL2";
-    src: url("../assets/fonts/MWFMDL2.woff") format("woff"), url("../assets/fonts/MWFMDL2.ttf") format("truetype"), url("../assets/fonts/MWFMDL2.svg") format("svg");
+    src: url("/fonts/MWFMDL2.woff") format("woff"), url("/fonts/MWFMDL2.ttf") format("truetype"), url("/fonts/MWFMDL2.svg") format("svg");
 }
 
 @font-face {
     font-family: 'SegoeUI';
-    src:url(../assets/fonts/SegoeUI/latest.eot),
-    url(../assets/fonts/SegoeUI/latest.eot#iefix) format("embedded-opentype"),
-    url(../assets/fonts/SegoeUI/latest.woff2) format("woff2"),
-    url(../assets/fonts/SegoeUI/latest.woff) format("woff"),
-    url(../assets/fonts/SegoeUI/latest.ttf) format("truetype"),
-    url(../assets/fonts/SegoeUI/latest.svg#web) format("svg");
+    src:url(/fonts/SegoeUI/latest.eot),
+    url(/fonts/SegoeUI/latest.eot#iefix) format("embedded-opentype"),
+    url(/fonts/SegoeUI/latest.woff2) format("woff2"),
+    url(/fonts/SegoeUI/latest.woff) format("woff"),
+    url(/fonts/SegoeUI/latest.ttf) format("truetype"),
+    url(/fonts/SegoeUI/latest.svg#web) format("svg");
     font-weight: 400;
 }
 
