--- a/less/typography.less
+++ b/less/typography.less
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "MWF-MDL2";
-    src: url("fonts/MWFMDL2.woff") format("woff"), url("/fonts/MWFMDL2.ttf") format("truetype"), url("/fonts/MWFMDL2.svg") format("svg");
+    src: url("/fonts/MWFMDL2.woff") format("woff"), url("/fonts/MWFMDL2.ttf") format("truetype"), url("/fonts/MWFMDL2.svg") format("svg");
 }
 
 @font-face {
@@ -8,7 +8,7 @@
     src:url(/fonts/SegoeUI/latest.eot),
     url(/fonts/SegoeUI/latest.eot#iefix) format("embedded-opentype"),
     url(/fonts/SegoeUI/latest.woff2) format("woff2"),
-    url(./fonts/SegoeUI/latest.woff) format("woff"),
+    url(/fonts/SegoeUI/latest.woff) format("woff"),
     url(/fonts/SegoeUI/latest.ttf) format("truetype"),
     url(/fonts/SegoeUI/latest.svg#web) format("svg");
     font-weight: 400;
