--- a/less/typography.less
+++ b/less/typography.less
@@ -86,6 +86,7 @@ h1 {
     font-weight: 100;
     color: @badge-gray;
     margin-bottom: 15px;
+    font-family: "SegoeUILight";
 }
 
 h2 {
@@ -117,6 +118,7 @@ h3 {
     font-size: 80px;
     line-height: 80px;
     color: black;
+    font-family: "SegoeUILight";
 }
 
 h4{
