--- a/styles/main.css
+++ b/styles/main.css
@@ -1470,6 +1470,7 @@ h1 {
   font-weight: 100;
   color: #333333;
   margin-bottom: 15px;
+  font-family: "SegoeUILight";
 }
 h2 {
   font-size: 52px;
@@ -1498,6 +1499,7 @@ h3 {
   font-size: 80px;
   line-height: 80px;
   color: black;
+  font-family: "SegoeUILight";
 }
 h4 {
   font-size: 3.25em;
