--- a/less/typography.less
+++ b/less/typography.less
@@ -1,77 +1,60 @@
-//@font-face {
-//    font-family: "MWF-MDL2";
-//    src: url("/fonts/MWFMDL2.woff") format("woff"), url("/fonts/MWFMDL2.ttf") format("truetype"), url("/fonts/MWFMDL2.svg") format("svg");
-//}
-//
-//@font-face {
-//    font-family: 'SegoeUI';
-//    src:url(/fonts/SegoeUI/latest.eot),
-//    url(/fonts/SegoeUI/latest.eot#iefix) format("embedded-opentype"),
-//    url(/fonts/SegoeUI/latest.woff2) format("woff2"),
-//    url(/fonts/SegoeUI/latest.woff) format("woff"),
-//    url(/fonts/SegoeUI/latest.ttf) format("truetype"),
-//    url(/fonts/SegoeUI/latest.svg#web) format("svg");
-//    font-weight: 400;
-//}
-
 @font-face {
     font-family: "MWF-MDL2";
-    src: url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.woff") format("woff"), url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.ttf") format("truetype"), url("https://assets.onestore.ms/cdnfiles/external/mwf/long/v1/v1.30.0/fonts/MWFMDL2.svg") format("svg")
+    src: url("/fonts/MWFMDL2.woff") format("woff"), url("/fonts/MWFMDL2.ttf") format("truetype"), url("/fonts/MWFMDL2.svg") format("svg");
 }
 
 @font-face {
     font-family: 'SegoeUI';
-    src:url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.eot);
-    src:local("Segoe UI"),local("Segoe"),local("Segoe WP"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.eot#iefix) format("embedded-opentype"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff2) format("woff2"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.woff) format("woff"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.ttf) format("truetype"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/normal/latest.svg#web) format("svg");
+    src:url(/fonts/SegoeUI/latest.eot),
+    url(/fonts/SegoeUI/latest.eot#iefix) format("embedded-opentype"),
+    url(/fonts/SegoeUI/latest.woff2) format("woff2"),
+    url(/fonts/SegoeUI/latest.woff) format("woff"),
+    url(/fonts/SegoeUI/latest.ttf) format("truetype"),
+    url(/fonts/SegoeUI/latest.svg#web) format("svg");
     font-weight: 400;
 }
 
 @font-face {
     font-family: 'SegoeUILight';
-    src:url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.eot#iefix) format("embedded-opentype"),
-    url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.woff2') format("woff2"),
-    url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.woff') format("woff"),
-    url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.ttf') format("ttf"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Light/latest.svg#web) format("svg");
+    src:url(/fonts/SegoeUILight/latest.eot#iefix) format("embedded-opentype"),
+    url('/fonts/SegoeUILight/latest.woff2') format("woff2"),
+    url('/fonts/SegoeUILight/latest.woff') format("woff"),
+    url('/fonts/SegoeUILight/latest.ttf') format("ttf"),
+    url(/fonts/SegoeUILight/latest.svg#web) format("svg");
     font-weight: 100;
 }
 
 @font-face {
     font-family: 'SegoeUISemiLight';
-    src:url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.eot#iefix) format("embedded-opentype"),
-    url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.woff2') format("woff2"),
-    url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.woff') format("woff"),
-    url('//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.ttf') format("ttf"),
-    url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/Semilight/latest.svg#web) format("svg");
+    src:url(/fonts/SegoeUISemiLight/latest.eot#iefix) format("embedded-opentype"),
+    url('/fonts/SegoeUISemiLight/latest.woff2') format("woff2"),
+    url('/fonts/SegoeUISemiLight/latest.woff') format("woff"),
+    url('/fonts/SegoeUISemiLight/latest.ttf') format("ttf"),
+    url(/fonts/SegoeUISemiLight/latest.svg#web) format("svg");
     font-weight: 200;
 }
 
 @font-face{
     font-family:'SegoeUISemiBold';
-    src:url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.eot);src:local("Segoe UI Semibold"),local("Segoe WP Semibold"),
-url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.eot#iefix) format("embedded-opentype"),
-url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff2) format("woff2"),
-url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.woff) format("woff"),
-url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.ttf) format("truetype"),
-url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/semibold/latest.svg#web) format("svg");
+    src:url('/fonts/SegoeUISemiBold/latest.eot');src:local("Segoe UI Semibold"),local("Segoe WP Semibold"),
+url(/fonts/SegoeUISemiBold/latest.eot#iefix) format("embedded-opentype"),
+url(/fonts/SegoeUISemiBold/latest.woff2) format("woff2"),
+url(/fonts/SegoeUISemiBold/latest.woff) format("woff"),
+url(/fonts/SegoeUISemiBold/latest.ttf) format("truetype"),
+url(/fonts/SegoeUISemiBold/latest.svg#web) format("svg");
 
     font-weight: 600;
 }
 
 @font-face {
     font-family: 'SegoeUIBold';
-    src:url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.eot);src:local("Segoe UI Bold"),
+    src:url(/fonts/SegoeUIBold/latest.eot);src:local("Segoe UI Bold"),
 local("Segoe WP Bold"),
-url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.eot#iefix) format("embedded-opentype"),
-url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff2) format("woff2"),
-url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.woff) format("woff"),
-url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.ttf) format("truetype"),
-url(//c.s-microsoft.com/static/fonts/segoe-ui/west-european/bold/latest.svg#web) format("svg");
+url(/fonts/SegoeUIBold/latest.eot#iefix) format("embedded-opentype"),
+url(/fonts/SegoeUIBold/latest.woff2) format("woff2"),
+url(/fonts/SegoeUIBold/latest.woff) format("woff"),
+url(/fonts/SegoeUIBold/latest.ttf) format("truetype"),
+url(/fonts/SegoeUIBold/latest.svg#web) format("svg");
     font-weight: 700;
 }
 
