add 25vh padding to end of site

--- a/less/content.less
+++ b/less/content.less
@@ -185,6 +185,9 @@ img{
         }
     }
 }
+#section-7-1 {
+    padding-bottom: 25vh;
+}
 .badge{
     justify-self: self-start;
     grid-column: ~" 1 / -1 ";
