updates across styles

--- a/less/content.less
+++ b/less/content.less
@@ -197,7 +197,7 @@ img{
     font-weight: 600;
     outline-color: transparent;
     color: #000000;
-    padding: 0 7px 1px 7px;
+    padding: 0 2px 1px;
     text-transform: uppercase;
     letter-spacing: 0;
     text-overflow: ellipsis;
