--- a/less/tablet.less
+++ b/less/tablet.less
@@ -26,14 +26,16 @@
       font-size: 2em;
   }
   h5 {
-      font-size: 1em;
+      font-size: 1.25em;
+      line-height: 1.25em;
+      font-family: "SegoeUI";
   }
   h6,
   h6.small {
       font-size: 1.4em;
   }
   p {
-      font-size: .8em;
+      font-size: .9em;
   }
   hr {
       grid-column-end: 10;
@@ -198,8 +200,15 @@
       }
     }
   }
-  #section-4-2 .thirds {
+  #section-4-2 {
+    .thirds {
       margin-top: 20px;
+      h5 {
+        margin-bottom: 20px;
+        font-family: SegoeUISemibold;
+      }
+
+    }
   }
   #section-4-6 {
       .row-five .thirds {
