Adding Touchstart function to menu trigger Padding on h3 in section 2-3

--- a/styles/main.css
+++ b/styles/main.css
@@ -2558,6 +2558,9 @@ a {
   .row.cs {
     grid-template-columns: 75px repeat(5, 1fr);
   }
+  #section-2-3 .fourths {
+    padding-bottom: 20px;
+  }
   #section-2-4 p {
     grid-column: span 6;
   }
