Menu height for Mobile to enable scroll

--- a/less/mobile.less
+++ b/less/mobile.less
@@ -28,7 +28,7 @@
   .cross-through{
     background-position: -20px 60%;
   }
-  
+
   .row-twelve{
   
     .fourths{
@@ -326,6 +326,10 @@
   .row.visible-xs{
     display: grid;
   }
-
+  #menu-list {
+    display: block;
+    overflow: scroll;
+    height: 90vh;
+  }
 
 }
