Attempt at cursor:pointer for ios nav

--- a/less/mobile.less
+++ b/less/mobile.less
@@ -327,9 +327,13 @@
     display: grid;
   }
   #menu-list {
-    display: block;
     overflow: scroll;
-    height: 90vh;
+    height: 100vh;
+    padding-bottom: 50px;
+  }
+  .sub-nav__item,
+  .sub-nav__item a {
+    cursor: pointer;
   }
 
 }
