update Dougs copy 4-17

--- a/less/content.less
+++ b/less/content.less
@@ -963,6 +963,9 @@ img{
         title, img{
             grid-column: span 2;
         }
+        p {
+            padding-right: 0;
+        }
     }
     .row-seven {
         margin-bottom: 30px;
