UPdates with Lillianna Rd1 4-18

--- a/less/content.less
+++ b/less/content.less
@@ -194,7 +194,8 @@ img{
     font-size: 13px;
     line-height: 18px;
     height: 18px;
-    font-weight: 600;
+    font-family: "SegoeUISemibold";
+    letter-spacing: .1em;
     outline-color: transparent;
     color: #000000;
     padding: 0 2px 1px;
