--- a/less/mobile.less
+++ b/less/mobile.less
@@ -109,11 +109,20 @@
 
   .badge{
     font-size: .6em;
+    letter-spacing: .1em;
   }
 
   #section-4-5, #section-4-6, #section-4-7, #section-5-4 { 
     .row-five{
       grid-template-columns: 1fr;
+    }
+  }
+  #section-4-5 {
+    .fat-thirds {
+      p {
+        padding-bottom: 30px;
+        padding-top: 5px;
+      }
     }
   }
 
