--- a/less/tablet.less
+++ b/less/tablet.less
@@ -5,6 +5,26 @@
 *
 */
 
+@media all and (max-width: 1084px ) {
+  h5 {
+    font-size: 1.25em;
+    line-height: 1.25em;
+  }
+  #section-4-1 {
+    .thirds {
+      padding-right: 20px;
+      p:not(.title) {
+        padding-top: 15px;
+      }
+      .title {
+        padding-bottom: 0;
+        margin-bottom: 0;
+        margin-top: 35px;
+      }
+    }
+  }
+}
+
 @media all and (max-width: 768px) {
   //typography
   #section-1 h1 {
@@ -33,6 +53,8 @@
   h6,
   h6.small {
       font-size: 1.4em;
+      font-family: "SegoeUI";
+      font-weight: inherit;
   }
   p {
       font-size: .9em;
