--- a/less/typography.less
+++ b/less/typography.less
@@ -122,7 +122,7 @@ h5{
 }
 
 h6{
-    font-weight: 600;
+    font-weight: inherit;
     font-size: 1.7em;
     line-height: 1.2em;
     padding-bottom: 5px;
